--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.0.0-rc.1",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-router": "^7.12.0",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
