--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router": "^7.12.0",
+    "react-router-dom": "^7.12.0",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
