--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "5.90.18",
     "axios": "1.13.2",
     "leaflet": "1.9.4",
     "react": "19.0.0-rc.1",
     "react-dom": "19.0.0-rc.1",
+    "react-hook-form": "^7.71.1",
     "react-icons": "5.5.0",
     "react-leaflet": "5.0.0",
     "react-router": "7.12.0",
-    "react-toastify": "11.0.5"
+    "react-toastify": "11.0.5",
+    "zod": "4.3.5"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "4.1.3",
