--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@reduxjs/toolkit": "^2.11.2",
     "@tanstack/react-query": "5.90.18",
     "axios": "1.13.2",
     "leaflet": "1.9.4",
-    "react": "19.0.0-rc.1",
-    "react-dom": "19.0.0-rc.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.71.1",
     "react-icons": "5.5.0",
-    "react-leaflet": "5.0.0",
+    "react-leaflet": "4.2.1",
+    "react-redux": "^9.2.0",
     "react-router": "7.12.0",
     "react-toastify": "11.0.5",
     "zod": "4.3.5"
@@ -40,8 +42,8 @@
     "@testing-library/user-event": "14.6.1",
     "@types/leaflet": "1.9.21",
     "@types/node": "24.10.0",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
     "@vitejs/plugin-react": "5.1.0",
     "@vitest/browser-playwright": "4.0.10",
     "@vitest/coverage-v8": "4.0.10",
