--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "react-redux": "^9.2.0",
     "react-router": "7.12.0",
     "react-toastify": "11.0.5",
+    "vite-plugin-pwa": "^1.2.0",
     "zod": "4.3.5"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "4.1.3",
     "@eslint/js": "9.39.1",
+    "@playwright/test": "^1.58.1",
     "@storybook/addon-a11y": "10.0.8",
     "@storybook/addon-docs": "10.0.8",
     "@storybook/addon-onboarding": "10.0.8",
