--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@reduxjs/toolkit": "^2.11.2",
     "@tanstack/react-query": "5.90.18",
     "axios": "1.13.2",
+    "chart.js": "^4.5.1",
     "leaflet": "1.9.4",
     "react": "18.3.1",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.71.1",
     "react-icons": "5.5.0",
