--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "@tanstack/react-query": "5.90.18",
     "axios": "1.13.2",
     "chart.js": "^4.5.1",
-    "leaflet": "1.9.4",
+    "leaflet": "^1.9.4",
     "react": "18.3.1",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.71.1",
     "react-icons": "5.5.0",
-    "react-leaflet": "4.2.1",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.2.0",
     "react-router": "7.12.0",
     "react-toastify": "11.0.5",
@@ -58,6 +58,8 @@
     "eslint-plugin-storybook": "10.0.8",
     "globals": "16.5.0",
     "jsdom": "27.2.0",
+    "msw": "^2.12.9",
+    "msw-storybook-addon": "^2.0.6",
     "playwright": "1.56.1",
     "storybook": "10.0.8",
     "typescript": "~5.9.3",
